inshallah sab acha hoga

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,10 +15,13 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+html{
+  overflow-x:hidden;
+}
 
 body {
   color: rgb(var(--foreground-rgb));
-
+  overflow-x:hidden;
 }
 
 @layer utilities {
